test/error/MemberNonstaticClassStatic.ci
public static class Test
{
	public bool Run() //ERROR: Only static members allowed in a static class
	{
		return true;
	}
}
